--- a/static/stat120/Day7.html
+++ b/static/stat120/Day7.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- April 10 2023
+ September 24 2023
 
 ---
 
@@ -394,744 +394,8 @@ class: middle
 
 .center.bold[This is the bootstrap distribution!]
 
----
 
-
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-*set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-*(X1_star &lt;- sample(X, replace = TRUE))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-*(X2_star &lt;- sample(X, replace = TRUE))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-*(X3_star &lt;- sample(X, replace = TRUE))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-(X3_star &lt;- sample(X, replace = TRUE))
-*(X4_star &lt;- sample(X, replace = TRUE))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-[1] 24 22 19 19 22 22
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-(X3_star &lt;- sample(X, replace = TRUE))
-(X4_star &lt;- sample(X, replace = TRUE))
-*(X5_star &lt;- sample(X, replace = TRUE))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-[1] 24 22 19 19 22 22
-[1] 23 22 19 24 20 22
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-(X3_star &lt;- sample(X, replace = TRUE))
-(X4_star &lt;- sample(X, replace = TRUE))
-(X5_star &lt;- sample(X, replace = TRUE))
-*(XN_star &lt;- sample(X, replace = TRUE))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-[1] 24 22 19 19 22 22
-[1] 23 22 19 24 20 22
-[1] 20 16 20 24 19 20
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-(X3_star &lt;- sample(X, replace = TRUE))
-(X4_star &lt;- sample(X, replace = TRUE))
-(X5_star &lt;- sample(X, replace = TRUE))
-(XN_star &lt;- sample(X, replace = TRUE))
-*(mean(X))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-[1] 24 22 19 19 22 22
-[1] 23 22 19 24 20 22
-[1] 20 16 20 24 19 20
-[1] 20.66667
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-(X3_star &lt;- sample(X, replace = TRUE))
-(X4_star &lt;- sample(X, replace = TRUE))
-(X5_star &lt;- sample(X, replace = TRUE))
-(XN_star &lt;- sample(X, replace = TRUE))
-(mean(X))
-*(mean(X1_star))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-[1] 24 22 19 19 22 22
-[1] 23 22 19 24 20 22
-[1] 20 16 20 24 19 20
-[1] 20.66667
-[1] 19.66667
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-(X3_star &lt;- sample(X, replace = TRUE))
-(X4_star &lt;- sample(X, replace = TRUE))
-(X5_star &lt;- sample(X, replace = TRUE))
-(XN_star &lt;- sample(X, replace = TRUE))
-(mean(X))
-(mean(X1_star))
-*(mean(X2_star))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-[1] 24 22 19 19 22 22
-[1] 23 22 19 24 20 22
-[1] 20 16 20 24 19 20
-[1] 20.66667
-[1] 19.66667
-[1] 20.16667
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-(X3_star &lt;- sample(X, replace = TRUE))
-(X4_star &lt;- sample(X, replace = TRUE))
-(X5_star &lt;- sample(X, replace = TRUE))
-(XN_star &lt;- sample(X, replace = TRUE))
-(mean(X))
-(mean(X1_star))
-(mean(X2_star))
-*(mean(X3_star))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-[1] 24 22 19 19 22 22
-[1] 23 22 19 24 20 22
-[1] 20 16 20 24 19 20
-[1] 20.66667
-[1] 19.66667
-[1] 20.16667
-[1] 22
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-(X3_star &lt;- sample(X, replace = TRUE))
-(X4_star &lt;- sample(X, replace = TRUE))
-(X5_star &lt;- sample(X, replace = TRUE))
-(XN_star &lt;- sample(X, replace = TRUE))
-(mean(X))
-(mean(X1_star))
-(mean(X2_star))
-(mean(X3_star))
-*(mean(X4_star))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-[1] 24 22 19 19 22 22
-[1] 23 22 19 24 20 22
-[1] 20 16 20 24 19 20
-[1] 20.66667
-[1] 19.66667
-[1] 20.16667
-[1] 22
-[1] 21.33333
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-(X3_star &lt;- sample(X, replace = TRUE))
-(X4_star &lt;- sample(X, replace = TRUE))
-(X5_star &lt;- sample(X, replace = TRUE))
-(XN_star &lt;- sample(X, replace = TRUE))
-(mean(X))
-(mean(X1_star))
-(mean(X2_star))
-(mean(X3_star))
-(mean(X4_star))
-*(mean(X5_star))
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-[1] 24 22 19 19 22 22
-[1] 23 22 19 24 20 22
-[1] 20 16 20 24 19 20
-[1] 20.66667
-[1] 19.66667
-[1] 20.16667
-[1] 22
-[1] 21.33333
-[1] 21.66667
-```
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-auto[
-
-```r
-set.seed(143); (X &lt;- c(20,24,19,23,22,16))  # n = 6
-(X1_star &lt;- sample(X, replace = TRUE))
-(X2_star &lt;- sample(X, replace = TRUE))
-(X3_star &lt;- sample(X, replace = TRUE))
-(X4_star &lt;- sample(X, replace = TRUE))
-(X5_star &lt;- sample(X, replace = TRUE))
-(XN_star &lt;- sample(X, replace = TRUE))
-(mean(X))
-(mean(X1_star))
-(mean(X2_star))
-(mean(X3_star))
-(mean(X4_star))
-(mean(X5_star))
-*(mean(XN_star))  # N = simulation size
-```
-]
- 
-.panel2-bootstrap-auto[
-
-```
-[1] 20 24 19 23 22 16
-[1] 16 23 20 23 16 20
-[1] 20 24 19 23 16 19
-[1] 23 24 23 16 24 22
-[1] 24 22 19 19 22 22
-[1] 23 22 19 24 20 22
-[1] 20 16 20 24 19 20
-[1] 20.66667
-[1] 19.66667
-[1] 20.16667
-[1] 22
-[1] 21.33333
-[1] 21.66667
-[1] 19.83333
-```
-]
-
-&lt;style&gt;
-.panel1-bootstrap-auto {
-  color: black;
-  width: 58.8%;
-  hight: 32%;
-  float: left;
-  padding-left: 1%;
-  font-size: 80%
-}
-.panel2-bootstrap-auto {
-  color: black;
-  width: 39.2%;
-  hight: 32%;
-  float: left;
-  padding-left: 1%;
-  font-size: 80%
-}
-.panel3-bootstrap-auto {
-  color: black;
-  width: NA%;
-  hight: 33%;
-  float: left;
-  padding-left: 1%;
-  font-size: 80%
-}
-&lt;/style&gt;
-
-
-
-
-
-.font70[
-
-]
-
----
-
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-demo-auto[
-
-```r
-*library(purrr)
-```
-]
- 
-.panel2-bootstrap-demo-auto[
-
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-demo-auto[
-
-```r
-library(purrr)
-*set.seed(143)
-```
-]
- 
-.panel2-bootstrap-demo-auto[
-
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-demo-auto[
-
-```r
-library(purrr)
-set.seed(143)
-*X &lt;- c(20,24,19,23,22,16)
-```
-]
- 
-.panel2-bootstrap-demo-auto[
-
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-demo-auto[
-
-```r
-library(purrr)
-set.seed(143)
-X &lt;- c(20,24,19,23,22,16)
-
-# Prototype simulation with N = 500
-*bootstrapped_means &lt;- tibble(
-* iteration = 1:500,
-* mean = map_dbl(iteration,
-*                ~mean(sample(X, replace = TRUE)))
-*) 
-```
-]
- 
-.panel2-bootstrap-demo-auto[
-
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-demo-auto[
-
-```r
-library(purrr)
-set.seed(143)
-X &lt;- c(20,24,19,23,22,16)
-
-# Prototype simulation with N = 500
-bootstrapped_means &lt;- tibble(
-  iteration = 1:500,
-  mean = map_dbl(iteration,
-                 ~mean(sample(X, replace = TRUE)))
-)
-
-*ggplot(bootstrapped_means, aes(x = mean))
-```
-]
- 
-.panel2-bootstrap-demo-auto[
-&lt;img src="Day7_files/figure-html/bootstrap-demo_auto_05_output-1.svg" width="100%" /&gt;
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-demo-auto[
-
-```r
-library(purrr)
-set.seed(143)
-X &lt;- c(20,24,19,23,22,16)
-
-# Prototype simulation with N = 500
-bootstrapped_means &lt;- tibble(
-  iteration = 1:500,
-  mean = map_dbl(iteration,
-                 ~mean(sample(X, replace = TRUE)))
-)
-
-ggplot(bootstrapped_means, aes(x = mean)) +
-* geom_dotplot(dotsize = 0.7,
-*              stackratio = 0.9,
-*              binwidth = .13,
-*              color = "gold",
-*              fill = "blue")
-```
-]
- 
-.panel2-bootstrap-demo-auto[
-&lt;img src="Day7_files/figure-html/bootstrap-demo_auto_06_output-1.svg" width="100%" /&gt;
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-demo-auto[
-
-```r
-library(purrr)
-set.seed(143)
-X &lt;- c(20,24,19,23,22,16)
-
-# Prototype simulation with N = 500
-bootstrapped_means &lt;- tibble(
-  iteration = 1:500,
-  mean = map_dbl(iteration,
-                 ~mean(sample(X, replace = TRUE)))
-)
-
-ggplot(bootstrapped_means, aes(x = mean)) +
-  geom_dotplot(dotsize = 0.7,
-               stackratio = 0.9,
-               binwidth = .13,
-               color = "gold",
-               fill = "blue") +
-* ggtitle("") + xlab("") + ylab("")
-```
-]
- 
-.panel2-bootstrap-demo-auto[
-&lt;img src="Day7_files/figure-html/bootstrap-demo_auto_07_output-1.svg" width="100%" /&gt;
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-demo-auto[
-
-```r
-library(purrr)
-set.seed(143)
-X &lt;- c(20,24,19,23,22,16)
-
-# Prototype simulation with N = 500
-bootstrapped_means &lt;- tibble(
-  iteration = 1:500,
-  mean = map_dbl(iteration,
-                 ~mean(sample(X, replace = TRUE)))
-)
-
-ggplot(bootstrapped_means, aes(x = mean)) +
-  geom_dotplot(dotsize = 0.7,
-               stackratio = 0.9,
-               binwidth = .13,
-               color = "gold",
-               fill = "blue") +
-  ggtitle("") + xlab("") + ylab("") +
-* scale_x_continuous(limits = c(17, 24),
-*                    expand = c(0, 0),
-*                    breaks = seq(17, 24, 1))
-```
-]
- 
-.panel2-bootstrap-demo-auto[
-&lt;img src="Day7_files/figure-html/bootstrap-demo_auto_08_output-1.svg" width="100%" /&gt;
-]
-
----
-count: false
- 
-## Bootstrap Distrubution
-.panel1-bootstrap-demo-auto[
-
-```r
-library(purrr)
-set.seed(143)
-X &lt;- c(20,24,19,23,22,16)
-
-# Prototype simulation with N = 500
-bootstrapped_means &lt;- tibble(
-  iteration = 1:500,
-  mean = map_dbl(iteration,
-                 ~mean(sample(X, replace = TRUE)))
-)
-
-ggplot(bootstrapped_means, aes(x = mean)) +
-  geom_dotplot(dotsize = 0.7,
-               stackratio = 0.9,
-               binwidth = .13,
-               color = "gold",
-               fill = "blue") +
-  ggtitle("") + xlab("") + ylab("") +
-  scale_x_continuous(limits = c(17, 24),
-                     expand = c(0, 0),
-                     breaks = seq(17, 24, 1)) +
-* labs(title = "Bootstrap distribution of sample mean")
-```
-]
- 
-.panel2-bootstrap-demo-auto[
-&lt;img src="Day7_files/figure-html/bootstrap-demo_auto_09_output-1.svg" width="100%" /&gt;
-]
-
-&lt;style&gt;
-.panel1-bootstrap-demo-auto {
-  color: black;
-  width: 50.96%;
-  hight: 32%;
-  float: left;
-  padding-left: 1%;
-  font-size: 80%
-}
-.panel2-bootstrap-demo-auto {
-  color: black;
-  width: 47.04%;
-  hight: 32%;
-  float: left;
-  padding-left: 1%;
-  font-size: 80%
-}
-.panel3-bootstrap-demo-auto {
-  color: black;
-  width: NA%;
-  hight: 33%;
-  float: left;
-  padding-left: 1%;
-  font-size: 80%
-}
-&lt;/style&gt;
-
-
-
-.font70[
-
-]
-
-
+.footnote[[Statkey Demo Page](https://www.lock5stat.com/StatKey/bootstrap_1_quant/bootstrap_1_quant.html)]
 
 ---
 
@@ -1148,14 +412,14 @@ class: action
 &lt;br&gt;
 .bq[
 
-Please go through the remainder of the class activity file and try to answer the questions
+Please go over the class activity and let me know if you have any questions.
 
 ]
 ]
 
-<div class="countdown" id="timer_bb4966f9" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_0f4985e4" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
