--- a/public/courses/stat120/week3/index.html
+++ b/public/courses/stat120/week3/index.html
@@ -52,7 +52,8 @@
   
     
   
-  <meta name="description" content="Day 7 Slides (pdf/html)" />
+  <meta name="description" content="Day 7 Slides (pdf/html)
+Day 8 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week3/" />
@@ -296,7 +297,8 @@
   <meta property="og:site_name" content="Deepak Bastola" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat120/week3/" />
   <meta property="og:title" content="Week 3 | Deepak Bastola" />
-  <meta property="og:description" content="Day 7 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Day 7 Slides (pdf/html)
+Day 8 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -790,8 +792,8 @@
 
           <div class="article-style">
             <p>Day 7 Slides (<a href="/stat120/Day7.pdf" target="_blank">pdf</a>/<a href="/stat120/Day7.html" target="_blank">html</a>)</p>
+<p>Day 8 Slides (<a href="/stat120/Day8.pdf" target="_blank">pdf</a>/<a href="/stat120/Day8.html" target="_blank">html</a>)</p>
 <!--
-Day 8 Slides (<a href="/stat120/Day8.pdf" target="_blank">pdf</a>/<a href="/stat120/Day8.html" target="_blank">html</a>)
 
 Day 9 Slides (<a href="/stat120/Day9.pdf" target="_blank">pdf</a>/<a href="/stat120/Day9.html" target="_blank">html</a>)
 
