--- a/public/stat120/Day8.html
+++ b/public/stat120/Day8.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- April 12 2023
+ September 26 2023
 
 ---
 
@@ -284,7 +284,7 @@ class: middle
 
 count: false
  
-## Bootstrap Distrubution using CarletonStats
+## Bootstrap Distrubution using CarletonStats R Package
 .panel1-bootstrap-demo-auto[
 
 ```r
@@ -299,7 +299,7 @@ count: false
 ---
 count: false
  
-## Bootstrap Distrubution using CarletonStats
+## Bootstrap Distrubution using CarletonStats R Package
 .panel1-bootstrap-demo-auto[
 
 ```r
@@ -315,7 +315,7 @@ library(CarletonStats)
 ---
 count: false
  
-## Bootstrap Distrubution using CarletonStats
+## Bootstrap Distrubution using CarletonStats R Package
 .panel1-bootstrap-demo-auto[
 
 ```r
@@ -329,15 +329,15 @@ X &lt;- c(20,24,19,23,22,16)
 
 ```
 
-	** Bootstrap interval for statistic
+	** Bootstrap interval for mean 
 
  Observed  X : 20.66667 
- Mean of bootstrap distribution: 20.67685 
- Standard error of bootstrap distribution: 1.1067 
+ Mean of bootstrap distribution: 20.67758 
+ Standard error of bootstrap distribution: 1.08735 
 
  Bootstrap percentile interval
     2.5%    97.5% 
-18.33333 22.66667 
+18.50000 22.66667 
 
 		*--------------*
 ```
@@ -397,12 +397,12 @@ class: action
 &lt;br&gt;
 .bq[
 
-Go over the remaining portion of in class activity and let me know if you have any questions!
+Please go over the class activity and [class helper page](https://stat120-fall23.netlify.app/) and let me know if you have any questions.
 
 ]
 ]
 
-<div class="countdown" id="timer_a781cb8e" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_203d9d1d" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
